Tweaked styling to printed attendance sheet to reduce improve readability now that we are displaying email and department. bugid: 4242

--- a/public/stylesheets/print.css
+++ b/public/stylesheets/print.css
@@ -52,3 +52,13 @@ ul li {
   border-bottom: dotted 2px;
   padding: 1em 0.25em;
 }
+
+p {
+  margin: 0;
+  font-size: larger;
+}
+
+p.line2 {
+  font-style: italic;
+  font-size: medium; 
+}
